[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-guard-console"
version = "0.1.0"
description = "Dry-run-first Binance Spot signal and OCO protection guard"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ven" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
bgc = "binance_guard_console.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
